--- a/eas.css
+++ b/eas.css
@@ -7,6 +7,8 @@ h1 {
 }
 
 body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: burlywood;
     height: 90vh;
     width: 99%;
     margin: 0px;
@@ -29,8 +31,10 @@ main{
 
 #painting{
     display: grid;
+    grid-auto-rows: auto;
+    grid-auto-columns: auto;
     width: 60%;
-    height: 100%;
+    /* height: 100%; */
     justify-content: center;
     align-items: center;
 }
@@ -39,4 +43,14 @@ main{
     width: 19%;
     height: 100%;
     text-align: center;
+}
+
+.pixel{
+    
+    border-radius: 2px;
+    display: grid;
+    min-height: 8px;
+    max-height: 8px;
+    min-width: 8px;
+    max-width: 8px;
 }
