--- a/eas.css
+++ b/eas.css
@@ -1,12 +1,19 @@
 h1 {
-    width: 100%;
+    font-family: 'Palatino Linotype', 'Segoe UI';
     left: 50%;
-    margin: 0;
+    margin: 15px;
     text-align: center;
+    text-shadow: 1px 1px rgb(148, 3, 39);
     padding: 5px;
 }
-
+p{
+    text-shadow: 2px 2px 4px rgb(226, 214, 47);
+    font-weight: 700;
+    font-size: 25px;
+}
 body{
+    background-image: url('bg.jpg');
+    background-size: cover;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: burlywood;
     height: 90vh;
@@ -15,42 +22,73 @@ body{
     padding: 0px;
 }
 main{
+    font-weight: 600;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
 }
+button{
+    font-weight: 500;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 8px;
+    border: 2px solid rgb(148, 3, 39);
+    background-color: white;
+    width: 120px;
+}
+button:hover{
+    box-shadow: 0 8px 12px 0 rgba(0,0,0,0.24), 0 11px 25px 0 rgba(0,0,0,0.19);
+    transition-duration: 90ms;
+}
 
 #palette{
     width: 19%;
-    height: 100%;
+    height: 60%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex-shrink: 1.8;
 }
 
 #painting{
+    background-color: black;
     display: grid;
     grid-auto-rows: auto;
     grid-auto-columns: auto;
-    width: 60%;
+    width: 640px;
     /* height: 100%; */
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
+    border: 2px solid;
+    z-index: 100;
+    box-shadow: 0 0 3px 3px rgb(148, 3, 39);
 }
 
-#pixels{
+#utility{
+    display: flex;
+    flex-direction: column;
     width: 19%;
-    height: 100%;
+    height: 60%;
     text-align: center;
+    justify-content: flex-start;
+    align-items: center;
+    flex-shrink: 1.8;
+    z-index: 90;
+    right: 50px;
 }
 
 .pixel{
     
     border-radius: 2px;
     display: grid;
-    min-height: 8px;
-    max-height: 8px;
-    min-width: 8px;
-    max-width: 8px;
+    min-height: 10px;
+    max-height: 10px;
+    min-width: 10px;
+    max-width: 10px;
 }
